[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meaco-exporter"
version = "1.0.0"
description = "Prometheus exporter and local control for the Meaco Arete Two dehumidifier"
requires-python = ">=3.12"
license = { text = "MIT-0" }
dependencies = [
    "tinytuya==1.18.1",
]
